<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ui.view.RegisterPersonActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinner_identification_type"
            android:layout_width="match_parent"
            android:layout_height="?attr/dropdownListPreferredItemHeight"
            android:background="@drawable/bg_spinner"
            android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
            android:prompt="@string/identification_type"
            android:paddingStart="10dp"
            android:spinnerMode="dialog" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextHintLayoutStyle"
            android:layout_marginTop="10dp"
            android:hint="@string/identification_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_identification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextHintLayoutStyle"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextHintLayoutStyle"
            android:layout_marginTop="10dp"
            android:hint="@string/first_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextHintLayoutStyle"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/TextHintLayoutStyle"
            android:hint="@string/last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextHintLayoutStyle"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/TextHintLayoutStyle"
            android:hint="@string/age">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_first_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextHintLayoutStyle"
                android:inputType="number"
                android:maxLength="3"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_gender"
            android:layout_width="match_parent"
            android:layout_height="?attr/dropdownListPreferredItemHeight"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:background="@drawable/bg_spinner"
            android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
            android:prompt="@string/identification_type"
            android:spinnerMode="dialog" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:padding="5dp"
            android:background="@color/button_gray"
            android:textColor="@color/white"
            android:text="@string/cancel"
            android:layout_margin="5dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_register"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:padding="5dp"
            android:background="@color/primary"
            android:textColor="@color/white"
            android:text="@string/register"
            android:layout_margin="5dp"/>

    </LinearLayout>

</LinearLayout>